--- a/puppet/modules/orawls/Gemfile
+++ b/puppet/modules/orawls/Gemfile
@@ -2,13 +2,12 @@ source 'https://rubygems.org'
 
 puppetversion = ENV.key?('PUPPET_VERSION') ? "= #{ENV['PUPPET_VERSION']}" : ['>= 3.0']
 
-platform :ruby_19, :ruby_20 do
-  gem 'coveralls', :require => false
-  gem 'simplecov', :require => false
-end
+gem 'coveralls', :require => false
+gem 'simplecov', :require => false
+
 gem 'puppet-lint'
 gem 'puppet', puppetversion
-gem 'rspec-puppet'
+gem 'rspec-puppet', '= 2.3.2'
 gem 'puppetlabs_spec_helper'
 gem 'metadata-json-lint'
 gem 'puppet-syntax'
